--- a/certifying-app-js/public/404.html
+++ b/certifying-app-js/public/404.html
@@ -1,41 +1,51 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>Service Connect</title>
-    <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script takes the current url and converts the path and query
-      // string into just a query string, and then redirects the browser
-      // to the new url with only a query string and hash fragment,
-      // e.g., https://www.foo.tld/one/two?a=b&c=d#qwe, becomes
-      // https://www.foo.tld/?/one/two&a=b~and~c=d#qwe
-      // Note: this 404.html file must be at least 512 bytes for it to work
-      // with Internet Explorer (it is currently > 512 bytes)
 
-      // If you're creating a Project Pages site and NOT using a custom domain,
-      // then set pathSegmentsToKeep to 1 (enterprise users may need to set it to > 1).
-      // This way the code will only replace the route part and not the real directory.
-      // For example, if your repository is 'my-app' and you're using GitHub Pages,
-      // the URL would be 'https://username.github.io/my-app', and the pathSegmentsToKeep
-      // would be 1, so the redirect would be to 'https://username.github.io/my-app/?/'
-      // instead of 'https://username.github.io/?/my-app/'.
-      // If you're using a custom domain, set pathSegmentsToKeep to 0.
+    <!--
+      Single Page Apps for GitHub Pages
+      MIT License
+      https://github.com/rafgraph/spa-github-pages
+
+      This script redirects all 404 routes to index.html
+      so client-side routing (React Router, etc.) works correctly.
+    -->
+
+    <script type="text/javascript">
+      // CHANGE THIS ONLY IF NEEDED
+      // 1 = GitHub Project Pages (https://username.github.io/repo-name)
+      // 0 = Custom Domain (https://example.com)
       var pathSegmentsToKeep = 1;
 
       var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
 
+      l.replace(
+        l.protocol +
+          '//' +
+          l.hostname +
+          (l.port ? ':' + l.port : '') +
+          l.pathname
+            .split('/')
+            .slice(0, 1 + pathSegmentsToKeep)
+            .join('/') +
+          '/?/' +
+          l.pathname
+            .slice(1)
+            .split('/')
+            .slice(pathSegmentsToKeep)
+            .join('/')
+            .replace(/&/g, '~and~') +
+          (l.search
+            ? '&' + l.search.slice(1).replace(/&/g, '~and~')
+            : '') +
+          l.hash
+      );
     </script>
   </head>
+
   <body>
+    <!-- Empty body is required -->
   </body>
 </html>
