--- a/certifying-app-js/public/404.html
+++ b/certifying-app-js/public/404.html
@@ -22,24 +22,23 @@
       // Set pathSegmentsToKeep to 0 if your site is hosted on a custom domain.
       var pathSegmentsToKeep = 1;
 
-      // var l = window.location;
-      // l.replace(
-      //   l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-      //   l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
-      //   l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-      //   (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-      //   l.hash
-      // );
-
-      // Above is the original code for BrowserRouter. Since we're using HashRouter,
-      // we need a simpler approach. Just redirect to index.html with the hash.
       var l = window.location;
       l.replace(
         l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/#' +
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/') +
-        l.search + l.hash
+        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/?/' +
+        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
+        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
+        l.hash
       );
+
+      // Above is the code for BrowserRouter. The HashRouter code has been commented out.
+      // var l = window.location;
+      // l.replace(
+      //   l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
+      //   l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + '/#' +
+      //   l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/') +
+      //   l.search + l.hash
+      // );
 
     </script>
   </head>
